syntax="proto3";
package pb;
option go_package="gen/pb";

message Order {
    message OrderProduct {
        string id  =1;
        string name =2;
        string description =3;  
        double price =4;
        uint32 quantity =5;
    }
    string id = 1;
    bytes createdAt = 2;
    string accountId = 3;
    double totalPrice = 4;
    repeated OrderProduct products = 5;
}

message CreateOrderRequest {
   message OrderProduct {
    string productId = 1;
    uint32 quantity = 2;
   }
   string accountId = 1;
   repeated OrderProduct products = 2;
}
message CreateOrderResponse {
   Order order = 1; 
}

message GetOrderRequest {
   string id = 1;
}
message GetOrderResponse {
   Order order = 1;
}

message GetOrderForAccountRequest {
   string accountId = 1; 
}
message GetOrderForAccountResponse {
   repeated Order orders = 1;
}

service OrderService {
   rpc CreateOrder (CreateOrderRequest) returns (CreateOrderResponse) {
   }
   rpc GetOrderForAccount (GetOrderForAccountRequest) returns (GetOrderForAccountResponse) {
   }
}